# riotbox

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  develop.sh  docker-compose.yml
app/cloud/: .gitignore  cdk.json  package.json
app/cloud/graphql/: schema.graphql
app/cloud/lib/: cdk-stack.js
app/mobile/: App.jsx  app.json  package.json
app/mobile/components/: AppLoading.jsx  AppPopupEdit.jsx  AppPopupError.jsx  AppPopupSuccess.jsx  AppTextInput.jsx
app/mobile/contexts/: AuthContext.jsx  UserThingsContext.jsx
app/mobile/graphql/: GraphqlApi.jsx  GraphqlOperations.jsx
app/mobile/hooks/: useThingsSubscription.jsx  useUpdateValue.jsx
app/mobile/misc/: aes.js
app/mobile/navigators/: HomeNavigator.jsx  LoggedInNavigator.jsx  LoggedOutNavigator.jsx
app/mobile/screens/: HomeScreen.jsx  MeScreen.jsx  (+6 more)
app/thing/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
app/thing/main/: CMakeLists.txt
app/thing/main/app/: app.c  deploy.c  deploy.h  mobile.c  mobile.h  ota.c  ota.h  provision.c  provision.h  thing.c  thing.h
app/thing/main/app/types/: default.c  default.h  switch.c  switch.h  type.c  type.h
app/thing/main/board/: board.h
app/thing/main/drivers/: storage.c  storage.h
app/thing/main/middlewares/: auth.c  auth.h  ble.c  ble.h  mqtt.c  mqtt.h  wifi.c  wifi.h
app/thing/main/utilities/: aes.c  aes.h  auth_aws_ota.h  auth_aws_provision.c  auth_aws_provision.h  event.c  event.h  misc.c  misc.h  state.c  state.h
scripts/docker/: riotbox_deinit.sh  riotbox_init1_cloud.sh  riotbox_init2_mobile.sh  riotbox_init3_thing.sh
(+43 files in other folders)
